[project]
name = "unipay"
version = "0.1.5"
description = ""
authors = [{ name = "djkcyl", email = "cyl@cyllive.cn" }]
dependencies = ["fastapi", "qrcode[pil]", "peewee", "uvicorn", "jinja2"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
unipay = "unipay.__main__:main"

[tool.pdm.build]
includes = ["unipay"]
